implementado documentação sobre os query params no swagger
